fix hero image squishing on medium breakpoint

--- a/RDX.SW/src/less/core/layout.less
+++ b/RDX.SW/src/less/core/layout.less
@@ -204,7 +204,7 @@ body {
                     }
 
                     @media @mediaQueryBreakpointMd {
-                        -ms-grid-columns: @page-margin 1fr auto 1fr @padding-unit 60%;
+                        -ms-grid-columns: @page-margin 1fr auto 1fr @padding-unit auto;
                         -ms-grid-rows: 1fr auto 1fr;
 
                         .main-content {
