--- a/RDX.SW/styles.css
+++ b/RDX.SW/styles.css
@@ -166,7 +166,7 @@ body {
 }
 @media (min-width: 768px) {
   .page-body .control-carousel .carousel-slideContainer .template-contentCard.content-left {
-    -ms-grid-columns: 48px 1fr auto 1fr 24px 60%;
+    -ms-grid-columns: 48px 1fr auto 1fr 24px auto;
     -ms-grid-rows: 1fr auto 1fr;
   }
   .page-body .control-carousel .carousel-slideContainer .template-contentCard.content-left .main-content {
@@ -1058,11 +1058,9 @@ button:hover:active {
   position: relative;
 }
 .sidebar {
-  color: #fff;
   text-align: center;
   align-items: stretch;
   position: relative;
-  color: #171717;
   overflow: hidden;
   background: #fff;
   background-size: cover;
@@ -1105,6 +1103,13 @@ button:hover:active {
 .sidebar .spec-list table {
   width: 100%;
 }
+.sidebar .spec-list table th,
+.sidebar .spec-list table td {
+  overflow: hidden;
+  box-sizing: content-box;
+  max-height: 14px;
+  padding-bottom: 1.1816px;
+}
 .sidebar .spec-list table th {
   font-weight: bold;
   padding-bottom: 12px;
@@ -1116,14 +1121,15 @@ button:hover:active {
   line-height: 14px;
   font-size: 0.75rem;
   line-height: 0.875rem;
+  padding-bottom: 1.1816px;
   padding-top: 1.1816px;
   padding-bottom: 0.07385rem;
   padding-top: 0.07385rem;
   font-weight: 400;
   overflow: hidden;
   box-sizing: content-box;
-  max-height: 14px;
-  padding-bottom: 1.1816px;
+  max-height: 20px;
+  padding-bottom: 0.227px;
 }
 .sidebar .spec-list .sidebar-text-additional.textType_maxLinesOne {
   white-space: nowrap;
